fix about page spacing/centering

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -61,6 +61,15 @@
     height: 40px;
     width: 40px;
   }
+
+
+
+
+  .band-photo-description {
+    width: auto;
+}
+
+  /** consider changing merch centering here */
 }
 
 
